test/official_tests/for/statement_increment.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
for (var a = 1; a < 2; {}) {}
